@@ -1,3 +1,8 @@
+Fri Feb 13 01:29:16 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* compile.c (iseq_set_sequence, compile_dstr_fragments),
+	  (iseq_compile_each): hides other internal objects.
+
 Fri Feb 13 00:48:42 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* insns.def (defineclass): try to autoload const to be overridden.
